#F-242 Fixed Andrey Briko SVF auto-zero filter: replace Arrays.asList by List.of